fixed side bar  media query 576px bottom-bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <nav id="side-bar" class="small-font">
                 <div class="top-bar">
                     <img src="img/logo.svg" alt="logo spotify" class="logo">
+                    <img src="img/logo-small.svg" alt="small logo" class="small-logo">
                     <ul class="list padding-x bold">
                         <li>
                             <a href="#" class="grey-text"><i class="fa-solid fa-house padding-y"></i> <span class="hidden">Home</span></a>
@@ -46,11 +47,10 @@
                     </ul>
                 </div>
                 <div class="bottom-bar">
-                    <div class="border-bottom padding-x">
+                    <div class="padding-x">
                         <a href="#" class="grey-text"><i class="fa-regular fa-circle-down"></i><span class="hidden padding-y bold">Installa app</span></a>
                     </div>
-                    <!-- <hr class="hidden"> -->
-                    <div class="profile d-flex align-center padding-x">
+                    <div class="profile d-flex align-center border-top padding-x">
                         <img src="img/profile.svg" alt="profile">
                         <p class="bold hidden padding-y">John Doe</p>
                     </div>
