fixed play bar wrap with media query 576px

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <div class="padding-x">
                         <a href="#" class="grey-text"><i class="fa-regular fa-circle-down"></i><span class="hidden padding-y bold">Installa app</span></a>
                     </div>
-                    <div class="profile d-flex align-center border-top padding-x">
+                    <div class="border-top"></div>
+                    <div class="profile d-flex align-center padding-x justify-start">
                         <img src="img/profile.svg" alt="profile">
                         <p class="bold hidden padding-y">John Doe</p>
                     </div>
@@ -201,15 +202,15 @@
                     Sinister <br>
                     <span class="opacity">Brano Nome</span>
                 </p>
-                <p class="opacity padding-y small-font"><i class="fa-regular fa-heart"></i> <i class="fa-regular fa-folder"></i></p>
+                <p class="opacity padding-y small-font"><i class="fa-regular fa-heart big-font"></i> <i class="fa-regular fa-folder big-font"></i></p>
             </div>
             <div class="text-white song">
-                <div class="play">
-                    <i class="fa-solid fa-shuffle padding-y"></i>
-                    <i class="fa-solid fa-backward-step padding-y"></i>
-                    <i class="fa-regular fa-circle-play padding-y"></i>
-                    <i class="fa-solid fa-forward-step padding-y"></i>
-                    <i class="fa-solid fa-rotate-right padding-y"></i>
+                <div class="play d-flex justify-center">
+                    <i class="fa-solid fa-shuffle padding-y big-font"></i>
+                    <i class="fa-solid fa-backward-step padding-y big-font"></i>
+                    <i class="fa-regular fa-circle-play padding-y big-font"></i>
+                    <i class="fa-solid fa-forward-step padding-y big-font"></i>
+                    <i class="fa-solid fa-rotate-right padding-y big-font"></i>
                 </div>
                 <div class="small-font d-flex align-center">
                     <p class="padding-y">0.23</p>
