hover effect play bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                     <h4 class="padding-x hidden text-white">PLAYLIST</h4>
                     <div class="d-flex align-center hidden grey-text bold small-padding-bottom">
-                        <a href="#"><i class="fa-solid fa-square-plus"></i></a> <p class="padding-y">Crea Playlist</p>
+                        <a href="#"><i class="fa-solid fa-square-plus white grey-text"></i></a> <p class="padding-y">Crea Playlist</p>
                     </div>
                     <ul class="line-height hidden playlist">
                         <li><a href="#" class="grey-text bold">Nuova Playlist</a></li>
@@ -79,7 +79,7 @@
                                 </div>
                             </div>
                             <p class="text-center padding-x small-font">
-                                Heavy Metal <br>
+                                <span class="bold">Heavy Metal</span><br>
                                 <span class="opacity">Subtitle</span>
                             </p>
                         </div>
@@ -90,10 +90,10 @@
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
-                            <p class="text-center padding-x small-font">
-                                Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack) <br>
+                            <div class="text-center padding-x small-font">
+                                <span class="bold">Stranger Things, Vol. 1 <br>(a Netflix Original Series Soundtrack) <br> </span>
                                 <span class="opacity">Kyle Dixon & Michael Stein</span>
-                            </p>
+                            </div>
                         </div>
                         <div class="cover padding-x">
                             <div class="cover-img">
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                             <p class="text-center padding-x small-font">
-                                A quiet place <br>
+                                <span class="bold">A quiet place</span><br>
                                 <span class="opacity">Subtitle</span>
                             </p>
                         </div>
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <p class="text-center padding-x small-font">
-                                Split <br>
+                                <span class="bold">Split</span><br>
                                 <span class="opacity">Subtitle</span>
                             </p>
                         </div>
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                             <p class="text-center padding-x small-font">
-                                A cure for wellness <br>
+                                <span class="bold">A cure wellness</span><br>
                                 <span class="opacity">Subtitle</span>
                             </p>
                         </div>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                             <p class="text-center padding-x small-font">
-                                Sinister <br>
+                                <span class="bold">Sinister</span><br>
                                 <span class="opacity">Subtitle</span>
                             </p>
                         </div>
@@ -156,7 +156,7 @@
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
-                            <p class="padding-x small-font text-center">Release Radar</p>
+                            <p class="padding-x small-font text-center bold">Release Radar</p>
                         </div>
                         <div class="padding-x cover-mix">
                             <div class="cover-img">
@@ -165,7 +165,7 @@
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
-                            <p class="padding-x small-font text-center">Daily Mix 1</p>
+                            <p class="padding-x small-font text-center bold">Daily Mix 1</p>
                         </div>
                     </div>
                 </section>
@@ -176,20 +176,20 @@
                         <div class="padding-x cover-mix">
                             <div class="cover-img">
                                 <img src="img/youg.jpeg" alt="lana del rey" class="circle">
-                                <div class="hover-play d-flex align-center justify-center">
+                                <div class="hover-play hover-play-circle d-flex align-center justify-center">
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
-                            <p class="small-font text-center padding-x">Lana Del Rey</p>
+                            <p class="small-font text-center padding-x bold">Lana Del Rey</p>
                         </div>
                         <div class="padding-x cover-mix">
                             <div class="cover-img">
                                 <img src="img/einaudi.jpeg" alt="enaudi" class="circle">
-                                <div class="hover-play d-flex align-center justify-center">
+                                <div class="hover-play hover-play-circle d-flex align-center justify-center">
                                     <i class="fa-regular fa-circle-play"></i>
                                 </div>
                             </div>
-                            <p class="small-font text-center padding-x">Ludovico Einaudi</p>
+                            <p class="small-font text-center padding-x bold">Ludovico Einaudi</p>
                         </div>
                     </div>
                 </section>
@@ -199,18 +199,18 @@
             <div class="d-flex align-center song text-white padding-y">
                 <img src="img/sinister.jpeg" alt="sinister">
                 <p class="padding-y small-font">
-                    Sinister <br>
-                    <span class="opacity">Brano Nome</span>
+                    <span class="underline">Sinister</span><br>
+                    <span class="opacity underline">Brano Nome</span>
                 </p>
-                <p class="opacity padding-y small-font"><i class="fa-regular fa-heart big-font"></i> <i class="fa-regular fa-folder big-font"></i></p>
+                <p class="opacity padding-y"><i class="fa-regular fa-heart big-font green"></i> <i class="fa-regular fa-folder big-font green"></i></p>
             </div>
             <div class="text-white song">
                 <div class="play d-flex justify-center">
-                    <i class="fa-solid fa-shuffle padding-y big-font"></i>
-                    <i class="fa-solid fa-backward-step padding-y big-font"></i>
-                    <i class="fa-regular fa-circle-play padding-y big-font"></i>
-                    <i class="fa-solid fa-forward-step padding-y big-font"></i>
-                    <i class="fa-solid fa-rotate-right padding-y big-font"></i>
+                    <i class="fa-solid fa-shuffle padding-y big-font green"></i>
+                    <i class="fa-solid fa-backward-step padding-y big-font green"></i>
+                    <i class="fa-regular fa-circle-play padding-y big-font green"></i>
+                    <i class="fa-solid fa-forward-step padding-y big-font green"></i>
+                    <i class="fa-solid fa-rotate-right padding-y big-font green"></i>
                 </div>
                 <div class="small-font d-flex align-center">
                     <p class="padding-y">0.23</p>
@@ -222,9 +222,9 @@
                 </div>
             </div>
             <div class="text-white song d-flex align-center justify-end padding-y">
-                <i class="fa-solid fa-bars padding-y"></i>
-                <i class="fa-solid fa-tv padding-y"></i>
-                <i class="fa-solid fa-volume-high padding-y"></i>
+                <i class="fa-solid fa-bars padding-y green"></i>
+                <i class="fa-solid fa-tv padding-y green"></i>
+                <i class="fa-solid fa-volume-high padding-y green"></i>
                 <div class="volume-bar">
                     <div class="start-bar"></div>
                 </div>
