hover underline to side-bar and main-content nav

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                     <img src="img/logo.svg" alt="logo spotify" class="logo">
                     <img src="img/logo-small.svg" alt="small logo" class="small-logo">
                     <ul class="list padding-x bold">
-                        <li>
+                        <li class="side-green">
                             <a href="#" class="grey-text"><i class="fa-solid fa-house padding-y"></i> <span class="hidden">Home</span></a>
                         </li>
-                        <li>
+                        <li class="side-green">
                             <a href="#" class="grey-text"><i class="fa-solid fa-magnifying-glass padding-y"></i><span class="hidden">Cerca
                             </span></a>
                         </li>
-                        <li>
+                        <li class="side-green">
                             <a href="#" class="grey-text"><i class="fa-solid fa-lines-leaning padding-y"></i><span class="hidden">La tua libreria</span></a>
                         </li>
                     </ul>
@@ -60,12 +60,12 @@
             <div id="main-content">
                 <nav class="padding-x">
                     <ul class="d-flex justify-center small-font wrap">
-                        <li class="padding-y"><a href="#" class=" grey-text bold">IN EVIDENZA</a></li>
-                        <li class="padding-y"><a href="#" class=" grey-text bold">PODCAST</a></li>
-                        <li class="padding-y"><a href="#" class=" grey-text bold">CLASSIFICHE</a></li>
-                        <li class="padding-y"><a href="#" class=" grey-text bold">GENERI E MOOD</a></li>
-                        <li class="padding-y"><a href="#" class=" grey-text bold">NUOVE USCITE</a></li>
-                        <li class="padding-y"><a href="#" class=" grey-text bold">SCOPRI</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold border-green">IN EVIDENZA</a></li>
+                        <li class="padding-y"><a href="#" class="grey-text bold border-green">PODCAST</a></li>
+                        <li class="padding-y"><a href="#" class="grey-text bold border-green">CLASSIFICHE</a></li>
+                        <li class="padding-y"><a href="#" class=" grey-text bold border-green">GENERI E MOOD</a></li>
+                        <li class="padding-y"><a href="#" class="grey-text bold border-green">NUOVE USCITE</a></li>
+                        <li class="padding-y"><a href="#" class="grey-text bold border-green">SCOPRI</a></li>
                     </ul>
                 </nav>
                 <section id="recently" class="padding-x text-white padding-y">
