input type "range" play bar

--- a/index.html
+++ b/index.html
@@ -214,10 +214,7 @@
                 </div>
                 <div class="small-font d-flex align-center">
                     <p class="padding-y">0.23</p>
-                    <div class="play-bar">
-                        <div class="start-bar">
-                        </div>
-                    </div>
+                    <input type="range" class="play-bar">
                     <p class="padding-y">4.35</p>
                 </div>
             </div>
@@ -225,9 +222,7 @@
                 <i class="fa-solid fa-bars padding-y green"></i>
                 <i class="fa-solid fa-tv padding-y green"></i>
                 <i class="fa-solid fa-volume-high padding-y green"></i>
-                <div class="volume-bar">
-                    <div class="start-bar"></div>
-                </div>
+                <input type="range" class="volume-bar">
             </div>
         </div>
     </div>
