section library bar, flex icon and dropdown menu

--- a/pages/library.html
+++ b/pages/library.html
@@ -58,7 +58,7 @@
                 </div>
             </nav>
             <div id="main-content">
-                <section class="d-flex align-center">
+                <section class="d-flex align-center library-intro">
                     <div class="heart-container">
                         <i class="fa-solid fa-heart"></i>
                     </div>
@@ -70,9 +70,24 @@
                                 <div class="profile d-flex align-center">
                                     <img src="../img/profile.svg" alt="player">
                                     <span class="padding-y">Erica Ostini - 4 brani</span>
-                                    
                                 </div>
                             </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="library-bar d-flex space-between">
+                    <div class="padding-x padding-y">
+                        <i class="fa-solid fa-circle-play text-white"></i>
+                        <i class="fa-regular fa-circle-down text-white"></i>
+                    </div>
+                    <div class="d-flex padding-x padding-y">
+                        <i class="fa-solid fa-magnifying-glass padding-y text-white"></i>
+                        <ul class="dropdown padding-y">
+                            <li>Ordina per</li>
+                            <li><a href="#">Aggiunto il giorno</a></li>
+                            <li><a href="#">Titolo</a></li>
+                            <li><a href="#">Artista</a></li>
+                            <li><a href="#">Album</a></li>
                         </ul>
                     </div>
                 </section>
