dropdown menu library bar

--- a/pages/library.html
+++ b/pages/library.html
@@ -77,18 +77,22 @@
                 </section>
                 <section class="library-bar d-flex space-between">
                     <div class="padding-x padding-y">
-                        <i class="fa-solid fa-circle-play text-white"></i>
-                        <i class="fa-regular fa-circle-down text-white"></i>
+                        <i class="fa-solid fa-circle-play green grey-text"></i>
+                        <i class="fa-regular fa-circle-down grey-text"></i>
                     </div>
                     <div class="d-flex padding-x padding-y">
-                        <i class="fa-solid fa-magnifying-glass padding-y text-white"></i>
-                        <ul class="dropdown padding-y">
-                            <li>Ordina per</li>
-                            <li><a href="#">Aggiunto il giorno</a></li>
-                            <li><a href="#">Titolo</a></li>
-                            <li><a href="#">Artista</a></li>
-                            <li><a href="#">Album</a></li>
-                        </ul>
+                        <i class="fa-solid fa-magnifying-glass padding-y grey-text"></i>
+                        <div class="dropdown">
+                            <span class="text-white padding-y grey-text">Aggiunto il giorno</span>
+                            <div class="dropdown-content">
+                                <ul class="padding-y">
+                                    <li><a href="#" class="line-height">Ordina per</a></li>
+                                    <li><a href="#" class="line-height">Titolo</a></li>
+                                    <li><a href="#" class="line-height">Artista</a></li>
+                                    <li><a href="#" class="line-height">Album</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
