flex bar song section

--- a/pages/library.html
+++ b/pages/library.html
@@ -75,7 +75,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="library-bar d-flex space-between">
+                <section class="library-bar d-flex space-between padding-y padding-x">
                     <div class="padding-x padding-y">
                         <i class="fa-solid fa-circle-play green grey-text"></i>
                         <i class="fa-regular fa-circle-down grey-text"></i>
@@ -94,6 +94,16 @@
                             </div>
                         </div>
                     </div>
+                </section>
+                <section class="bar-song padding-x padding-y library-intro">
+                    <ul class="d-flex space-between">
+                        <li>#</li>
+                        <li><a href="#" class="grey-text">Titolo</a></li>
+                        <li><a href="#" class="grey-text">Album</a></li>
+                        <li><a href="#" class="grey-text">Aggiunto il giorno</a></li>
+                        <li><i class="fa-regular fa-clock"></i></li>
+                    </ul>
+                    <div></div>
                 </section>
             </div>
         </main>
