first column section bar song

--- a/pages/library.html
+++ b/pages/library.html
@@ -96,14 +96,16 @@
                     </div>
                 </section>
                 <section class="bar-song padding-x padding-y library-intro">
-                    <ul class="d-flex space-between">
-                        <li>#</li>
-                        <li><a href="#" class="grey-text">Titolo</a></li>
-                        <li><a href="#" class="grey-text">Album</a></li>
-                        <li><a href="#" class="grey-text">Aggiunto il giorno</a></li>
-                        <li><i class="fa-regular fa-clock"></i></li>
-                    </ul>
-                    <div></div>
+                    <div class="padding-y">
+                        <ul>
+                            <li class="padding-x">#</li>
+                            <li class="padding-x">1</li>
+                            <li class="padding-x">2</li>
+                            <li class="padding-x">3</li>
+                            <li class="padding-x">4</li>
+                        </ul>
+                        
+                    </div>
                 </section>
             </div>
         </main>
