--- a/pages/library.html
+++ b/pages/library.html
@@ -96,15 +96,66 @@
                     </div>
                 </section>
                 <section class="bar-song padding-x padding-y library-intro">
-                    <div class="padding-y">
+                    <div class="padding-y d-flex space-between">
                         <ul>
                             <li class="padding-x">#</li>
-                            <li class="padding-x">1</li>
-                            <li class="padding-x">2</li>
-                            <li class="padding-x">3</li>
-                            <li class="padding-x">4</li>
+                            <li class="padding-x number-container">1</li>
+                            <li class="padding-x number-container">2</li>
+                            <li class="padding-x number-container">3</li>
+                            <li class="padding-x number-container">4</li>
                         </ul>
-                        
+                        <ul>
+                            <li class="padding-x"><a href="#" class="grey-text">Titolo</a></li>
+                            <li class="padding-x d-flex align-center">
+                                <img src="../img/aquietplace.jpeg" alt="quite place" class="album-img">
+                                <span class="padding-y grey-text">A quite place<br>
+                                Subtitle</span>
+                            </li>
+                            <li class="padding-x d-flex align-center">
+                                <img src="../img/split.jpeg" alt="split" class="album-img">
+                                <span class="padding-y grey-text">Split<br>
+                                Subtitle</span>
+                            </li>
+                            <li class="padding-x d-flex align-center">
+                                <img src="../img/sinister.jpeg" alt="sinister" class="album-img">
+                                <span class="padding-y grey-text">Sinister<br>
+                                Subtitle</span>
+                            </li>
+                            <li class="padding-x d-flex align-center">
+                                <img src="../img/metal_lifting.jpg" alt="metal" class="album-img">
+                                <span class="padding-y grey-text">Heavy Metal<br>
+                                Subtitle</span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="padding-x"><a href="#" class="grey-text">Album</a></li>
+                            <li class="number-container padding-x"><a href="#">Quite</a></li>
+                            <li class="number-container padding-x"><a href="#">Split</a></li>
+                            <li class="number-container padding-x"><a href="#">Sinister</a></li>
+                            <li class="number-container padding-x"><a href="#">Metal</a></li>
+                        </ul>
+                        <ul>
+                            <li class="padding-x"><a href="#" class="grey-text">Aggiunto il giorno</a></li>
+                            <li class="number-container padding-x">15 set 2023</li>
+                            <li class="number-container padding-x">15 set 2023</li>
+                            <li class="number-container padding-x">2 set 2023</li>
+                            <li class="number-container padding-x">24 ago 2023</li>
+                        </ul>
+                        <ul>
+                            <li class="padding-x"><i class="fa-regular fa-clock"></i></li>
+                            <li class="number-container padding-x">
+                                <i class="fa-solid fa-heart"></i> <span class="padding-y">1:58</span>
+                            </li>
+                            <li class="number-container padding-x">
+                                <i class="fa-solid fa-heart"></i> <span class="padding-y">2:58</span>
+                            </li>
+                            <li class="number-container padding-x">
+                                <i class="fa-solid fa-heart"></i> <span class="padding-y">1:48</span>
+                            </li>
+                            <li class="number-container padding-x">
+                                <i class="fa-solid fa-heart"></i> <span class="padding-y">3:58</span>
+                            </li>
+                        </ul>
                     </div>
                 </section>
             </div>
