add page library to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </span></a>
                         </li>
                         <li class="side-green">
-                            <a href="#" class="grey-text"><i class="fa-solid fa-lines-leaning padding-y"></i><span class="hidden">La tua libreria</span></a>
+                            <a href="pages/library.html" class="grey-text"><i class="fa-solid fa-lines-leaning padding-y"></i><span class="hidden">La tua libreria</span></a>
                         </li>
                     </ul>
                     <h4 class="padding-x hidden text-white">PLAYLIST</h4>
