fixed tab "brani che ti piacciono"

--- a/pages/library.html
+++ b/pages/library.html
@@ -69,7 +69,7 @@
                             <li>
                                 <div class="profile d-flex align-center">
                                     <img src="../img/profile.svg" alt="player">
-                                    <span class="padding-y">Erica Ostini - 4 brani</span>
+                                    <span class="padding-y">Erica Ostini - 5 brani</span>
                                 </div>
                             </li>
                         </ul>
@@ -96,67 +96,104 @@
                     </div>
                 </section>
                 <section class="bar-song padding-x padding-y library-intro">
-                    <div class="padding-y d-flex space-between">
-                        <ul>
-                            <li class="padding-x">#</li>
-                            <li class="padding-x number-container">1</li>
-                            <li class="padding-x number-container">2</li>
-                            <li class="padding-x number-container">3</li>
-                            <li class="padding-x number-container">4</li>
-                        </ul>
-                        <ul>
-                            <li class="padding-x"><a href="#" class="grey-text">Titolo</a></li>
-                            <li class="padding-x d-flex align-center">
-                                <img src="../img/aquietplace.jpeg" alt="quite place" class="album-img">
-                                <span class="padding-y grey-text">A quite place<br>
-                                Subtitle</span>
-                            </li>
-                            <li class="padding-x d-flex align-center">
-                                <img src="../img/split.jpeg" alt="split" class="album-img">
-                                <span class="padding-y grey-text">Split<br>
-                                Subtitle</span>
-                            </li>
-                            <li class="padding-x d-flex align-center">
-                                <img src="../img/sinister.jpeg" alt="sinister" class="album-img">
-                                <span class="padding-y grey-text">Sinister<br>
-                                Subtitle</span>
-                            </li>
-                            <li class="padding-x d-flex align-center">
-                                <img src="../img/metal_lifting.jpg" alt="metal" class="album-img">
-                                <span class="padding-y grey-text">Heavy Metal<br>
-                                Subtitle</span>
-                            </li>
-                        </ul>
-                        <ul>
-                            <li class="padding-x"><a href="#" class="grey-text">Album</a></li>
-                            <li class="number-container padding-x"><a href="#">Quite</a></li>
-                            <li class="number-container padding-x"><a href="#">Split</a></li>
-                            <li class="number-container padding-x"><a href="#">Sinister</a></li>
-                            <li class="number-container padding-x"><a href="#">Metal</a></li>
-                        </ul>
-                        <ul>
-                            <li class="padding-x"><a href="#" class="grey-text">Aggiunto il giorno</a></li>
-                            <li class="number-container padding-x">15 set 2023</li>
-                            <li class="number-container padding-x">15 set 2023</li>
-                            <li class="number-container padding-x">2 set 2023</li>
-                            <li class="number-container padding-x">24 ago 2023</li>
-                        </ul>
-                        <ul>
-                            <li class="padding-x"><i class="fa-regular fa-clock"></i></li>
-                            <li class="number-container padding-x">
-                                <i class="fa-solid fa-heart"></i> <span class="padding-y">1:58</span>
-                            </li>
-                            <li class="number-container padding-x">
-                                <i class="fa-solid fa-heart"></i> <span class="padding-y">2:58</span>
-                            </li>
-                            <li class="number-container padding-x">
-                                <i class="fa-solid fa-heart"></i> <span class="padding-y">1:48</span>
-                            </li>
-                            <li class="number-container padding-x">
-                                <i class="fa-solid fa-heart"></i> <span class="padding-y">3:58</span>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="divTable">
+                        <div class="headerRow">
+                            <div class="divCell">#</div>
+                            <div class="divCell">Titolo</div>
+                            <div class="divCell">Album</div>
+                            <div class="divCell">Aggiunto il giorno</div>
+                            <div class="divCell"><i class="fa-regular fa-clock"></i></div>
+                        </div>
+                        <div class="divRow">
+                            <div class="divCell">1</div>
+                            <div class="divCell">
+                                <div class="img-playlist d-flex align-center">
+                                    <img src="../img/aquietplace.jpeg" alt="a quite place">
+                                    <p>
+                                        A quite place <br>
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="divCell">Quite place</div>
+                            <div class="divCell">14 set 2023</div>
+                            <div class="divCell">
+                                <i class="fa-solid fa-heart"></i>
+                                <span>1:54</span>
+                            </div>
+                        </div>
+                        <div class="divRow">
+                            <div class="divCell">2</div>
+                            <div class="divCell">
+                                <div class="img-playlist d-flex align-center">
+                                    <img src="../img/cure.jpeg" alt="cure">
+                                    <p>
+                                        A cure for wellness<br>
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="divCell">Wellness</div>
+                            <div class="divCell">14 set 2023</div>
+                            <div class="divCell">
+                                <i class="fa-solid fa-heart"></i>
+                                <span>2:38</span>
+                            </div>
+                        </div>
+                        <div class="divRow">
+                            <div class="divCell">3</div>
+                            <div class="divCell">
+                                <div class="img-playlist d-flex align-center">
+                                    <img src="../img/metal_lifting.jpg" alt="metal">
+                                    <p>
+                                        Heavy Metal <br>
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="divCell">Metal</div>
+                            <div class="divCell">6 set 2023</div>
+                            <div class="divCell">
+                                <i class="fa-solid fa-heart"></i>
+                                <span>3:24</span>
+                            </div>
+                        </div>
+                        <div class="divRow">
+                            <div class="divCell">4</div>
+                            <div class="divCell">
+                                <div class="img-playlist d-flex align-center">
+                                    <img src="../img/split.jpeg" alt="split">
+                                    <p>
+                                        Split <br>
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="divCell">Split</div>
+                            <div class="divCell">28 ago 2023</div>
+                            <div class="divCell">
+                                <i class="fa-solid fa-heart"></i>
+                                <span>1:49</span>
+                            </div>
+                        </div>
+                        <div class="divRow">
+                            <div class="divCell">5</div>
+                            <div class="divCell">
+                                <div class="img-playlist d-flex align-center">
+                                    <img src="../img/sinister.jpeg" alt="sinister">
+                                    <p>
+                                        Sinister <br>
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="divCell">Sinister</div>
+                            <div class="divCell">18 ago 2023</div>
+                            <div class="divCell">
+                                <i class="fa-solid fa-heart"></i>
+                                <span>3:16</span>
+                            </div>
+                        </div>
                 </section>
             </div>
         </main>
