--- a/pages/library.html
+++ b/pages/library.html
@@ -69,7 +69,7 @@
                             <li>
                                 <div class="profile d-flex align-center">
                                     <img src="../img/profile.svg" alt="player">
-                                    <span class="padding-y">Erica Ostini - 5 brani</span>
+                                    <span class="padding-y">Erica Ostini - 4 brani</span>
                                 </div>
                             </li>
                         </ul>
@@ -98,100 +98,89 @@
                 <section class="bar-song padding-x padding-y library-intro">
                     <div class="divTable">
                         <div class="headerRow">
-                            <div class="divCell">#</div>
-                            <div class="divCell">Titolo</div>
+                            <div class="divCell-plus"># <span class="padding-y">Titolo</span></div>
                             <div class="divCell">Album</div>
                             <div class="divCell">Aggiunto il giorno</div>
                             <div class="divCell"><i class="fa-regular fa-clock"></i></div>
                         </div>
                         <div class="divRow">
-                            <div class="divCell">1</div>
-                            <div class="divCell">
-                                <div class="img-playlist d-flex align-center">
-                                    <img src="../img/aquietplace.jpeg" alt="a quite place">
-                                    <p>
-                                        A quite place <br>
-                                        Subtitle
-                                    </p>
+                            <div class="divCell-plus">
+                                <div class="d-flex align-center">
+                                    <span>1</span>
+                                    <div class="img-playlist d-flex align-center padding-y">
+                                        <img src="../img/sinister.jpeg" alt="sinister">
+                                        <p class="padding-y">
+                                            <a href="#" class="underline">Sinister</a><br>
+                                            <a href="#" class="grey-text small-font">Subtitle</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="divCell">Quite place</div>
+                            <div class="divCell"><a href="#" class="underline grey-text">Sinister</a></div>
                             <div class="divCell">14 set 2023</div>
                             <div class="divCell">
                                 <i class="fa-solid fa-heart"></i>
-                                <span>1:54</span>
+                                <span class="padding-y">1:54</span>
                             </div>
                         </div>
                         <div class="divRow">
-                            <div class="divCell">2</div>
-                            <div class="divCell">
-                                <div class="img-playlist d-flex align-center">
-                                    <img src="../img/cure.jpeg" alt="cure">
-                                    <p>
-                                        A cure for wellness<br>
-                                        Subtitle
-                                    </p>
+                            <div class="divCell-plus">
+                                <div class="d-flex align-center">
+                                    <span>2</span>
+                                    <div class="img-playlist d-flex align-center padding-y">
+                                        <img src="../img/cure.jpeg" alt="cure">
+                                        <p class="padding-y">
+                                            <a href="#" class="underline">A cure for wellness</a><br>
+                                            <a href="#" class="grey-text small-font">Subtitle</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="divCell">Wellness</div>
+                            <div class="divCell"><a href="#" class="underline grey-text">Wellness</a></div>
                             <div class="divCell">14 set 2023</div>
                             <div class="divCell">
                                 <i class="fa-solid fa-heart"></i>
-                                <span>2:38</span>
+                                <span class="padding-y">2:38</span>
                             </div>
                         </div>
                         <div class="divRow">
-                            <div class="divCell">3</div>
-                            <div class="divCell">
-                                <div class="img-playlist d-flex align-center">
-                                    <img src="../img/metal_lifting.jpg" alt="metal">
-                                    <p>
-                                        Heavy Metal <br>
-                                        Subtitle
-                                    </p>
+                            <div class="divCell-plus">
+                                <div class="d-flex align-center">
+                                    <span>3</span>
+                                    <div class="img-playlist d-flex align-center padding-y">
+                                        <img src="../img/metal_lifting.jpg" alt="metal">
+                                        <p class="padding-y">
+                                            <a href="#" class="underline">Heavy Metal</a><br>
+                                            <a href="#" class="grey-text small-font">Subtitle</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="divCell">Metal</div>
+                            <div class="divCell"><a href="#" class="underline grey-text">Metal</a></div>
                             <div class="divCell">6 set 2023</div>
                             <div class="divCell">
                                 <i class="fa-solid fa-heart"></i>
-                                <span>3:24</span>
+                                <span class="padding-y">3:24</span>
                             </div>
                         </div>
                         <div class="divRow">
-                            <div class="divCell">4</div>
-                            <div class="divCell">
-                                <div class="img-playlist d-flex align-center">
-                                    <img src="../img/split.jpeg" alt="split">
-                                    <p>
-                                        Split <br>
-                                        Subtitle
-                                    </p>
+                            <div class="divCell-plus">
+                                <div class="d-flex align-center">
+                                    <span>4</span>
+                                    <div class="img-playlist d-flex align-center padding-y">
+                                        <img src="../img/split.jpeg" alt="split">
+                                        <p class="padding-y">
+                                            <a href="#" class="underline">Split</a><br>
+                                            <a href="#" class="grey-text small-font">Subtitle</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="divCell">Split</div>
+                            <div class="divCell"><a href="#" class="underline grey-text">Split</a></div>
                             <div class="divCell">28 ago 2023</div>
                             <div class="divCell">
                                 <i class="fa-solid fa-heart"></i>
-                                <span>1:49</span>
-                            </div>
-                        </div>
-                        <div class="divRow">
-                            <div class="divCell">5</div>
-                            <div class="divCell">
-                                <div class="img-playlist d-flex align-center">
-                                    <img src="../img/sinister.jpeg" alt="sinister">
-                                    <p>
-                                        Sinister <br>
-                                        Subtitle
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="divCell">Sinister</div>
-                            <div class="divCell">18 ago 2023</div>
-                            <div class="divCell">
-                                <i class="fa-solid fa-heart"></i>
-                                <span>3:16</span>
+                                <span class="padding-y">1:49</span>
                             </div>
                         </div>
                 </section>
