fixed size, padding and hover "library intro"

--- a/pages/library.html
+++ b/pages/library.html
@@ -63,13 +63,17 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div>
-                        <ul>
+                        <ul class="padding-y">
                             <li>Playlist</li>
-                            <li><h1>Brani che ti piacciono</h1></li>
+                            <li><h1 class="title">Brani che ti piacciono</h1></li>
                             <li>
                                 <div class="profile d-flex align-center">
                                     <img src="../img/profile.svg" alt="player">
-                                    <span class="padding-y">Erica Ostini - 4 brani</span>
+                                    <p>
+                                        <a href="#" class="padding-y underline bold">Erica Ostini</a>
+                                        &#9679;
+                                        <span class="padding-y">4 brani</span>
+                                    </p>
                                 </div>
                             </li>
                         </ul>
