--- a/pages/library.html
+++ b/pages/library.html
@@ -79,10 +79,10 @@
                         </ul>
                     </div>
                 </section>
-                <section class="library-bar d-flex space-between padding-y padding-x">
+                <section class="library-bar d-flex space-between align-center padding-x">
                     <div class="padding-x padding-y">
-                        <i class="fa-solid fa-circle-play green grey-text"></i>
-                        <i class="fa-regular fa-circle-down grey-text"></i>
+                        <i class="fa-solid fa-circle-play green-play"></i>
+                        <i class="fa-regular fa-circle-down grey-text medium-font"></i>
                     </div>
                     <div class="d-flex padding-x padding-y">
                         <i class="fa-solid fa-magnifying-glass padding-y grey-text"></i>
