--- a/pages/library.html
+++ b/pages/library.html
@@ -82,7 +82,7 @@
                 <section class="library-bar d-flex space-between align-center padding-x">
                     <div class="padding-x padding-y">
                         <i class="fa-solid fa-circle-play green-play"></i>
-                        <i class="fa-regular fa-circle-down grey-text medium-font"></i>
+                        <i class="fa-regular fa-circle-down grey-text med-font"></i>
                     </div>
                     <div class="d-flex padding-x padding-y">
                         <i class="fa-solid fa-magnifying-glass padding-y grey-text"></i>
@@ -101,7 +101,7 @@
                 </section>
                 <section class="bar-song padding-x padding-y library-intro">
                     <div class="divTable">
-                        <div class="headerRow">
+                        <div class="headerRow border-bottom">
                             <div class="divCell-plus"># <span class="padding-y">Titolo</span></div>
                             <div class="divCell">Album</div>
                             <div class="divCell">Aggiunto il giorno</div>
@@ -110,7 +110,7 @@
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span>1</span>
+                                    <span class="padding-right">1</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/sinister.jpeg" alt="sinister">
                                         <p class="padding-y">
@@ -130,7 +130,7 @@
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span>2</span>
+                                    <span class="padding-right">2</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/cure.jpeg" alt="cure">
                                         <p class="padding-y">
@@ -150,7 +150,7 @@
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span>3</span>
+                                    <span class="padding-right">3</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/metal_lifting.jpg" alt="metal">
                                         <p class="padding-y">
@@ -170,7 +170,7 @@
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span>4</span>
+                                    <span class="padding-right">4</span>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/split.jpeg" alt="split">
                                         <p class="padding-y">
