equalizer animation playbar and library page

--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
         </main>
         <div id="play-bar" class="d-flex space-between">
             <div class="d-flex align-center song text-white padding-y">
+                <div class="soundwave-container">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
                 <img src="img/sinister.jpeg" alt="sinister">
                 <p class="padding-y small-font">
                     <span class="underline">Sinister</span><br>
