--- a/pages/library.html
+++ b/pages/library.html
@@ -110,7 +110,12 @@
                         <div class="divRow">
                             <div class="divCell-plus">
                                 <div class="d-flex align-center">
-                                    <span class="padding-right">1</span>
+                                    <div class="soundwave-container play-bar-song">
+                                        <div class="bar"></div>
+                                        <div class="bar"></div>
+                                        <div class="bar"></div>
+                                        <div class="bar"></div>
+                                    </div>
                                     <div class="img-playlist d-flex align-center padding-y">
                                         <img src="../img/sinister.jpeg" alt="sinister">
                                         <p class="padding-y">
@@ -192,6 +197,12 @@
         </main>
         <div id="play-bar" class="d-flex space-between">
             <div class="d-flex align-center song text-white padding-y">
+                <div class="soundwave-container play-bar-song">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
                 <img src="../img/sinister.jpeg" alt="sinister">
                 <p class="padding-y small-font">
                     <span class="underline">Sinister</span><br>
